overflow fix

--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ button > i {
 /* contact list */
 
 .list-box {
-    height: 100%;
+    height: calc(100% - 248px);
     overflow: auto;
 }
 
@@ -217,7 +217,6 @@ button > i {
     width: 100%;
     height: calc(100% - 145px);
     background-image: url(img/mine.jpg);
-    background-size: contain;
     overflow: auto;
 }
 
@@ -225,6 +224,7 @@ button > i {
     display: flex;
     flex-direction: column;
     width: 100%;
+    height: 100%;
     padding: 2em 10%;
     overflow: auto;
 }
